image distortion fix

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -304,6 +304,7 @@ p {
   display: block;
   height: auto;
   width: 100%;
+  height: 200px;
 }
 
 .project-image-overlay {
